fix: fix overflow bug

--- a/src/components/section-one/style.scss
+++ b/src/components/section-one/style.scss
@@ -4,6 +4,8 @@
     background-color: $standard-background-color;
     color: $standard-link-color;
 
+    overflow: hidden;
+
     width: 100vw;
     height: 500px;
 
